<?xml version="1.0"?>
<package format="2">
    <name>sensor_simulator</name>
    <version>0.0.1</version>
    <description>A simple ROS node that publishes odometry with quaternion orientation using AngleAxis for rotations.</description>

    <maintainer email="your_email@example.com">Your Name</maintainer>
    <license>BSD</license>

    <!-- Specify dependencies on other catkin packages -->
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>std_msgs</build_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <!-- Eigen is commonly available, but if not, ensure its installation -->
    <build_depend>eigen</build_depend>
    <exec_depend>eigen</exec_depend>

    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>
